--- a/scss/index.scss
+++ b/scss/index.scss
@@ -319,21 +319,27 @@ body {
   }
 
   .graph {
+    margin-top: 5rem;
     grid-area: center;
+    display: grid;
+    grid-template-areas: "circle circle" "info info";
 
     .contient {
       margin-top: -4rem;
       display: flex;
       flex-direction: column;
     }
+    .circle {
+      grid-area: circle;
+      justify-self: center;
+      margin-top: -3rem;
+    }
 
-    &.left {
-      grid-area: center;
-
-      svg {
-        margin-left: -20.5%;
-        transform: rotateZ(90deg);
-      }
+    .contient.one {
+      grid-area: info;
+      grid-row: 2;
+      width: max-content;
+      margin-top: 3rem;
 
       #g18,
       #g1016,
@@ -373,13 +379,13 @@ body {
         }
       }
     }
-    &.right {
-      grid-area: center;
-
-      svg {
-        margin-left: 29.5%;
-        transform: rotateZ(-90deg);
-      }
+    .contient.two {
+      grid-area: info;
+      grid-row: 2;
+      grid-column: 2;
+      width: max-content;
+      margin-right: 7rem;
+      margin-top: 3rem;
 
       #g18,
       #g1016,
@@ -680,12 +686,14 @@ body {
   .main-text::after,
   .second-text::after {
     content: "";
-    display: block;
+    display: flex;
+    align-self: flex-end;
     background-color: var(--bubble-bg-color);
     height: 6vw;
-    width: 6%;
-    position: relative;
-    bottom: calc(5vw / 2);
+    width: 6vw;
+    margin: 0 2rem -1rem 0;
+    transform: rotateZ(45deg);
+    border-radius: 50% 0 10% 0;
 
     z-index: 2;
   }
