--- a/scss/index.scss
+++ b/scss/index.scss
@@ -319,9 +319,11 @@ body {
   }
 
   .graph {
-    margin-top: 5rem;
+    margin-top: 4rem;
     grid-area: center;
+    width: 33vw;
     display: grid;
+    justify-self: center;
     grid-template-areas: "circle circle" "info info";
 
     .contient {
@@ -338,8 +340,10 @@ body {
     .contient.one {
       grid-area: info;
       grid-row: 2;
+      justify-self: center;
       width: max-content;
-      margin-top: 3rem;
+      margin-top: 5rem;
+      margin-left: -17rem;
 
       #g18,
       #g1016,
@@ -349,10 +353,9 @@ body {
 
       ul {
         justify-items: center;
-        margin-right: 7.5vw;
-        margin-top: -5rem;
+        margin-top: -4rem;
         direction: rtl;
-        transform: translateX(-25%);
+        transform: translateX(-20%);
       }
 
       .main-text::after,
@@ -360,32 +363,17 @@ body {
         right: calc(0.5vw - 10vw);
         transform: rotate(45deg);
       }
-
-      .info {
-        direction: rtl;
-      }
-
-      .info ul {
-        border-radius: 2em 0 0 2em;
-        border-right: none;
-      }
-
-      @keyframes slide-in {
-        0% {
-          transform: translateX(130%);
-        }
-        100% {
-          transform: translateX(0%);
-        }
-      }
     }
+
     .contient.two {
       grid-area: info;
       grid-row: 2;
       grid-column: 2;
+      justify-self: center;
       width: max-content;
-      margin-right: 7rem;
-      margin-top: 3rem;
+      margin-right: 4rem;
+
+      margin-top: 5rem;
 
       #g18,
       #g1016,
@@ -396,9 +384,9 @@ body {
       ul {
         justify-items: center;
         margin-left: 5em;
-        margin-top: -5rem;
+        margin-top: -4rem;
         direction: ltr;
-        transform: translateX(75%);
+        transform: translateX(70%);
       }
 
       .main-text::after,
@@ -407,33 +395,15 @@ body {
         transform: rotate(-45deg);
       }
 
-      .info {
-        direction: ltr;
-      }
-
-      .info ul {
-        border-radius: 0 2em 2em 0;
-        border-left: none;
-      }
-
       #g18,
       #g1016,
       #g1203 {
         transform: rotate(0deg);
       }
-
-      @keyframes slide-in {
-        0% {
-          transform: translateX(-130%);
-        }
-        100% {
-          transform: translateX(0%);
-        }
-      }
     }
   }
 
-  .left {
+  .container.left {
     display: grid;
 
     grid-area: left;
@@ -441,9 +411,52 @@ body {
     grid-template-areas:
       "main-info graph"
       "logo info";
+
+    .logo {
+      margin-left: 8rem;
+      margin-right: 4rem;
+    }
+    .circles {
+      margin-left: -4rem;
+    }
+
+    ul {
+      justify-items: center;
+      margin-top: 3rem;
+      margin-left: 2rem;
+      direction: rtl;
+      transform: translateX(-20%);
+    }
+
+    .info {
+      direction: rtl;
+      grid-area: logo;
+    }
+
+    .info ul {
+      border-radius: 2em 0 0 2em;
+      padding: 3vh 3vh 0 8vh;
+      padding-right: 8rem;
+      border-right: none;
+      margin-right: -11rem;
+      margin-top: 2rem;
+    }
+
+    ul li:first-child {
+      margin-top: -1rem;
+    }
+
+    @keyframes slide-in {
+      0% {
+        transform: translateX(-130%);
+      }
+      100% {
+        transform: translateX(0%);
+      }
+    }
   }
 
-  .right {
+  .container.right {
     display: grid;
 
     grid-area: right;
@@ -451,6 +464,48 @@ body {
     grid-template-areas:
       "graph main-info"
       "info logo";
+    .logo {
+      margin-right: 4rem;
+      margin-left: 6rem;
+    }
+    .circles {
+      margin-left: 10rem;
+    }
+
+    .info {
+      grid-area: logo;
+      direction: ltr;
+      margin-left: -3rem;
+    }
+
+    .info ul {
+      border-radius: 0 2em 2em 0;
+      padding: 3vh 8vh 0 3vh;
+      padding-left: 8rem;
+      border-left: none;
+      margin-left: -12.5rem;
+      margin-top: 2rem;
+    }
+
+    ul {
+      justify-items: center;
+
+      margin-top: 3rem;
+      direction: ltr;
+    }
+
+    ul li:first-child {
+      margin-top: -1rem;
+    }
+
+    @keyframes slide-in {
+      0% {
+        transform: translateX(-130%);
+      }
+      100% {
+        transform: translateX(0%);
+      }
+    }
   }
 
   @keyframes rotate1 {
@@ -494,7 +549,7 @@ body {
     box-sizing: border-box;
     height: 30vh;
   }
-  .graph .container {
+  .container {
     display: flex;
     flex-direction: column;
     margin: 1vh 0;
@@ -508,7 +563,6 @@ body {
   }
   .graph ul {
     flex: 0 0 10%;
-    padding: 3vh;
     width: max-content;
   }
   .graph ul li {
@@ -534,6 +588,17 @@ body {
   .graph ul li:nth-of-type(3) {
     animation-delay: 10s;
     list-style-image: url(../resources/factory.svg);
+  }
+
+  .graph .info ul li {
+    list-style-image: none;
+  }
+
+  .graph .info {
+    margin-top: 3rem;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
   }
 
   #g18 {
@@ -578,6 +643,8 @@ body {
   /* Item */
   .logo {
     grid-area: logo;
+    width: 15vw;
+    margin: -12rem 0 0 0;
   }
 
   .circles {
@@ -585,8 +652,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 5vh;
-    width: 50vw;
+    padding-top: 4vh;
+    width: 25vw;
   }
 
   .circles ul {
@@ -596,7 +663,7 @@ body {
   .circles li {
     border-radius: 50%;
     margin-bottom: 3vh;
-    font-size: 1.5em;
+    font-size: 0.7rem;
     opacity: 0;
     animation: fadein 3s forwards linear;
     background: var(--circle-bg-color);
@@ -671,9 +738,8 @@ body {
   .main-text,
   .second-text {
     background: var(--bubble-bg-color);
-    width: 25vw;
     height: fit-content;
-    max-width: 25vw;
+    max-width: 23vw;
     border-radius: 1vh;
     position: relative;
     padding: 0;
